--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: flt-kpi-api
     env: python
     plan: free
+    autoDeploy: true
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
