--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
   - type: web
     name: flt-kpi-api
     runtime: python
-    plan: pro
+    plan: starter
     region: singapore
     autoDeploy: true
     buildCommand: pip install -r requirements.txt
