--- a/render.yaml
+++ b/render.yaml
@@ -9,18 +9,8 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT --loop asyncio
     envVars:
-      - key: DB_HOST
-        value: dpg-d4pr99je5dus73eb5730.singapore-postgres.render.com
-      - key: DB_NAME
-        value: flt_sales_commission_db
-      - key: DB_USER
-        value: flt_sales_commission_db_user
       - key: DB_PASSWORD
-        sync: false
-      - key: REFRESH_API_KEY
-        sync: false
-      - key: PUSH_API_KEY
-        sync: false
+        sync: false  # Set manually in Render dashboard
 
   # Cron Job: MV Refresh every 30 min during business hours (8am-11pm MYT)
   - type: cron
